--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Mdkar/UndefinedBehaviorBot#readme",
   "dependencies": {
+    "@discordjs/rest": "^0.3.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
