--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@discordjs/rest": "^0.3.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "oracledb": "^5.1.0"
   }
 }
